# parascribe

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-diarization.txt  requirements-gpu.txt  requirements.txt
deploy/: parascribe.service
scripts/: check_gpu.py
specs/multi-model-registry/: spec.md
src/parascribe/: __init__.py  align.py  asr.py  auth.py  config.py  diarize.py  formats.py  log.py  main.py  media.py  stitch.py  usage.py
tests/: test_align.py  test_api.py  test_auth.py  test_config.py  test_formats.py  test_integration.py  test_log.py  test_media.py  test_stitch.py  test_usage.py
